--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,43 +14,43 @@
         android:theme="@style/Theme.PI"
         tools:targetApi="31">
         <activity
-            android:name=".DetalheEventoActivity"
+            android:name=".activity.DetalheEventoActivity"
             android:exported="false" />
         <activity
-            android:name=".DetalheHistoricoItemAlunoActivity"
+            android:name=".activity.DetalheHistoricoItemAlunoActivity"
             android:exported="false" />
         <activity
-            android:name=".DetalheAlunoActivity"
+            android:name=".activity.DetalheAlunoActivity"
             android:exported="false" />
         <activity
-            android:name=".DetalheNoticiaActivity"
+            android:name=".activity.DetalheNoticiaActivity"
             android:exported="false" />
         <activity
-            android:name=".CadastroItemHistoricoAlunoActivity"
+            android:name=".activity.CadastroItemHistoricoAlunoActivity"
             android:exported="false" />
         <activity
-            android:name=".CadastroAlunoActivity"
+            android:name=".activity.CadastroAlunoActivity"
             android:exported="false" />
         <activity
-            android:name=".CadastroEventoActivity"
+            android:name=".activity.CadastroEventoActivity"
             android:exported="false" />
         <activity
-            android:name=".CadastroNoticiaActivity"
+            android:name=".activity.CadastroNoticiaActivity"
             android:exported="false" />
         <activity
-            android:name=".HomeActivity"
+            android:name=".activity.HomeActivity"
             android:exported="false" />
         <activity
-            android:name=".SobreActivity"
+            android:name=".activity.SobreActivity"
             android:exported="false" />
         <activity
-            android:name=".CadastroActivity"
+            android:name=".activity.CadastroActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".activity.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:exported="true"
             android:theme="@android:style/Theme.NoDisplay">
             <intent-filter>
